fix: scheme name
